--- a/main.css
+++ b/main.css
@@ -88,3 +88,71 @@ h4 {
     #956fff 90%
   );
 }
+
+/*
+.rock-img:hover {
+  content: "Punk Rock";
+  font-size: 0px;
+  width: 100px;
+  height: 130px;
+  color: rgb(255, 255, 255);
+  background-image: url(/images/punk-rock.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+}
+
+.paper-img:hover {
+  content: "Punk Rock";
+  font-size: 0px;
+  width: 100px;
+  height: 130px;
+  color: rgb(255, 255, 255);
+  background-image: url(/images/toiletpaper.jpg);
+  background: -webkit-linear-gradient(
+    to right,
+    #fc7889 10%,
+    #ffff7b 25%,
+    #7bffd7 50%,
+    #75dfff 75%,
+    #956fff 90%
+  );
+  background: linear-gradient(
+    to right,
+    #fc7889 10%,
+    #ffff7b 25%,
+    #7bffd7 50%,
+    #75dfff 75%,
+  );
+  background-image: url(/images/toiletpaper.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 110%;
+}
+
+.scissors-img:hover {
+  content: "Punk Rock";
+  font-size: 0px;
+  width: 100px;
+  height: 130px;
+  color: rgb(255, 255, 255);
+  background-image: url(/images/edward-scissors-hands-fat.jpg);
+  background: -webkit-linear-gradient(
+    to right,
+    #fc7889 10%,
+    #ffff7b 25%,
+    #7bffd7 50%,
+    #75dfff 75%,
+    #956fff 90%
+  );
+  background: linear-gradient(
+    to right,
+    #fc7889 10%,
+    #ffff7b 25%,
+    #7bffd7 50%,
+    #75dfff 75%,
+    #956fff 90%
+  );
+  background-image: url(/images/edward-scissors-hands-fat.jpg);
+  background-repeat: no-repeat;
+  background-size: 150%;
+}
+*/
